add pipenv shell instructions and some todos

--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,8 @@
-- remove old .venv (and update README)
+- download motor carrier list
+- iterate over pages
+- include more of each page
+- write to csv (or database)
+- organize code into functions
+- add usage to README
+- add basic info to README
+- add strategy to README
